--- a/index.html
+++ b/index.html
@@ -16,15 +16,15 @@
 		<div class="container">
 			<br><br>
 			<h1 class="header center ">
-				<a target="_blank" href="http://cmarkea.com">
-					<img src="img/logo_arkea-small.jpg" alt="Crédit Mutuel Arkea" width="100%" style="max-width:600px"/>
+				<a target="_blank" href="https://goo.gl/PvQ5Y4">
+					<img src="https://goo.gl/HgDRj2" alt="Crédit Mutuel Arkea" width="100%" style="max-width:600px"/>
 				</a>
 			</h1>
 			<div class="row center">
 				<h5 class="header col s12 light">Contributions Open Source</h5>
 			</div>
 			<div class="row center">
-				<a href="https://github.com/creditmutuelarkea/"
+				<a href="https://goo.gl/9oaLYd"
 				target="_blank" class="red btn-large waves-effect waves-light">Go On Github</a>
 			</div>
 			<br><br>
@@ -42,7 +42,7 @@
 						est maintenant disponible
 					</p>
 					<div class="card-action">
-						<a target="_blank" href="./presentations/presentation-openstackday.html">Lien vers la présentation</a>
+						<a target="_blank" href="https://goo.gl/XGg63Y">Lien vers la présentation</a>
 					</div>
 				</div>
 			</div>
@@ -56,8 +56,8 @@
 						le cycle de livraison.
 					</p>
 					<div class="card-action">
-						<a target="_blank" href="https://github.com/jenkinsci/openstack-heat-plugin">Lien vers Github Jenkins</a><br>
-						<a target="_blank" href="https://wiki.jenkins-ci.org/display/JENKINS/Openstack+Heat+Plugin">Lien vers le wiki Plugin Jenkins</a>
+						<a target="_blank" href="https://goo.gl/jyUznK">Lien vers Github Jenkins</a><br>
+						<a target="_blank" href="https://goo.gl/u3QeIR">Lien vers le wiki Plugin Jenkins</a>
 					</div>
 				</div>
 			</div>
@@ -69,7 +69,7 @@
 		<footer>
 			<div class="footer-copyright">
 				<div class="container">
-					Powered by <a class="white-text" href="http://cmarkea.com">CMArkea</a>
+					Powered by <a class="white-text" href="https://goo.gl/PvQ5Y4">CMArkea</a>
 				</div>
 			</div>
 		</footer>
