ajout de la video openstackday

--- a/index.html
+++ b/index.html
@@ -43,7 +43,9 @@
 					</p>
 					<div class="card-action">
 						<a target="_blank" href="https://goo.gl/XGg63Y">Lien vers la présentation</a>
+						<a target="_blank" href="https://www.youtube.com/watch?v=m11r5kCrVeA">Lien vers la video</a>
 					</div>
+
 				</div>
 			</div>
 
