--- a/index.html
+++ b/index.html
@@ -65,6 +65,21 @@
 			</div>
 
 		</div>
+
+		<div class="row">
+			 <div class="col s12 m6">
+				 <div class="card">
+				 	<span class="card-title" style="padding: 10px">OpenstackDay 21/11/2017</span>
+				 	<p style="padding: 10px">Nous avons participé à <a href="https://openstackdayfrance.fr/" target="_blank">l'OpenstackDay France</a>
+				 		pour présenter notre retour d'expérience de la migration de version de notre cloud privé. Cette présentation
+				 		est maintenant disponible
+				 	</p>
+				 	<div class="card-action">
+				 		<a target="_blank" href="https://goo.gl/jfaZH9">Lien vers la présentation</a>				 
+				 	</div>
+				 </div>
+			 </div>
+		</div>
 	</div>
 
 	<div id="footer" class="red" style="padding:20px; width:100% ; position : absolute; bottom:0">
